feat: let request function modular for other requests